wp-content/themes/rr/style.css
/* ... */
section[role="circles"] a:before,section[role="circles"] a:after {
	margin:0;
	padding:0;
	display:block;
}

section[role="gallery"] {
	max-width:850px;
	margin:80px auto 0;
	padding-left:10px;
}

section[role="gallery"] .ngg-gallery-thumbnail img {
	border:none;
}

section[role="main"] {
	padding:40px 0 40px;
	margin-left:10px;
}

section[role="main"] .wrap {
	max-width:960px;
	margin:0 auto;
}

section[role="main"] h3 {
	color:#667280;
	font-size:44px;
	font-family:oswaldbold;
	text-align:center;
	margin:0 0 30px;
}

section[role="main"] article {
	max-width:640px;
	margin:0 auto;
	overflow:hidden;
}

section[role="main"] .date {
	float:left;
	width:100px;
	text-align:center;
	background:url(img/date-bg.png) no-repeat 0 0;
	margin:0 35px 0 0;
}

section[role="main"] .content {
	float:left;
	max-width:505px;
}

section[role="main"] .day {
	color:#dddfe3;
	font-size:58px;
	font-weight:700;
	line-height:65px;
	font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
	display:block;
}

section[role="main"] .month {
	color:#fff;
	font-size:12px;
	font-weight:700;
	text-transform:capitalize;
	font-family:Arial,sans-serif;
	background:#acb3ba;
	padding:2px 10px;
	-webkit-border-radius:3px;
	-moz-border-radius:3px;
	border-radius:3px;
}

section[role="main"] .year {
	color:#c2c2c2;
	font-size:12px;
	font-family:Arial,sans-serif;
	display:block;
	margin:5px 0 0;
}

section[role="main"] h2 {
	margin:0;
}

section[role="main"] h2 a {
	color:#991b1e;
	font-size:20px;
	font-family:robotoregular;
}

section[role="main"] .author {
	color:#667280;
	font-size:16px;
	font-family:robotolight;
}

section[role="main"] .author a {
	color:#991b1e;
	font-size:16px;
	font-family:robotolight;
}

section[role="main"] p {
	color:#667280;
	font-size:16px;
	font-family:robotolight;
	line-height:24px;
}

section[role="main"] .view-article {
	color:#990101;
	font-size:12px;
	font-family:robotolight;
	display:block;
	float:right;
	margin-top:30px;
}
section[role="leader"] {
  padding: 40px 0 40px;
}

section[role="leader"] h3 {
	color:#667280;
	font-size:44px;
	font-family:oswaldbold;
	text-align:center;
}

/*section[role="leader"] img.leader-thumbnail:hover{
  display: none;
}

section[role="leader"] img.leader-hover-thumbnail:hover{
  display: block;
}*/

section[role="leader"] ul {
  list-style-type: none;
  padding: 0;
}

section[role="leader"] ul li {
  display: block;
  float: left;
  width: 199px;
  margin: 30px 38px 0 0;
  line-height: 22px;
}

section[role="leader"] ul li.last {
  margin: 30px 0 0 0;
}

section[role="leader"] ul li a:hover {
  text-decoration: none;
}
section[role="leader"] h4 {
  font-family: robotoregular;
  font-size: 18px;
  margin: 0;
}
section[role="leader"] .tagline {
  font-family: robotolight;
  font-size: 14px;
  color: #667280;
  line-height: 3px;
}

.leader-popout-content p {
  margin-top: 0px;
}

/* Fancybox Styling */
.fancybox-lock {
  overflow: hidden;
  margin: 0 !important;
}

#fancybox-close {
  right: -55px;
}
#fancybox-content {
  background: white;
}

#fancybox-left, #fancybox-right {
  width: 30px;
}

#fancybox-left {
  left: -55px;
}

#fancybox-right {
  right: -95px;
}

#fancybox-left, #fancybox-right {
  visibility: visible;
  display: block;
}

#fancybox-left-ico span, #fancybox-right-ico span{
  left: auto;
  right: 0;
}

#fancybox-left-ico {
  left: 20px;
}
#fancybox-right-ico {
  right: 20px;
  left: auto;
}

/*#fancybox-close {
  right: -55px !important;
}*/

/*****FANCYBOX STYLING*****/

/*#fancybox-overlay {
  background-color: #000000 !important;
  opacity: 0.8 !important;
}

#fancybox-close {
  position: absolute;
  right: -55px !important;
  top: -15px  !important;
}

#fancybox-right {
  position: absolute !important;
  right: -80px !important;
}

#fancybox-left {
  position: absolute !importnat;
  left: -60px !important;
}
 
#fancybox-content {
  width: 640px !important;
  height: 360px !important;
}*/


.leader-popout {
  max-width: 680px;
}

.leader-popout-left{
  width: 200px;
  float: left;
  margin: 25px 5px 15px 25px;
}
.leader-popout-left img.leader-thumbnail {
  float: left;
}

.leader-popout-right {
  max-width: 380px;
  float: left;
  padding: 20px;
}

.leader-popout-content {
  overflow: scroll;
  height: 375px;
  margin-top: 20px;
}

.leader-popout-right h4 {
  font-family: robotolight;
  font-size: 28px;
  margin: 0.1em 0 0.5em 0;
}

.leader-popout-right .tagline {
  font-family: robotobold;
  font-size: 14px;
}

.leader-popout-right p {
  font-family: robotolight;
  font-size: 14px;
}


/*------------------------------------*\
	TECHNOLOGY ITEMS
\*------------------------------------*/

.section_items{
	list-style: none;
	float: left;
	padding: 0px;
	margin: 0px;
}
ul.section_items li {
	width: 100% !important;
	list-style: none !important;
	margin-bottom: 20px !important;
}
.section_items li img {
	vertical-align: top;
	padding-right: 25px;
}
.section_items li div {
	width: 760px;
	display: inline-block;
}
.section_items li div > h4 {
	text-transform: uppercase;
	margin: 0;
}
.section_items li div > p {
	font-size: 19px;
	line-height: 30px;
}

.section_items.capabilities ul {
	margin: 10px 0;
	padding: 0;
}

.section_items.first {
  padding-top: 30px;
  margin-top: 1em;
}

.section_items.last {
  padding-bottom: 30px;
  margin-bottom: 1em;
}

/*------------------------------------*\
	ICONS
\*------------------------------------*/

/* Icons */

header .icons {
	position: absolute;
	right: 20px;
	top: 0;
}

.search {
	width: 32px;
	height: 32px;
	display: inline-block;
	text-indent: -9999px;
	background: url(img/ico-search.jpg) no-repeat 0 0;
	margin-right: 3px;
	transition: all .3s ease;
	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	-ms-transition: all .3s ease;
	-o-transition: all .3s ease;
}
.search input {
	width: 200px;
	display: none;
}

.search:hover {
	width: 232px;
	background-position: 0 bottom;
	padding: 0 0 0 32px;
}

.search form {float: left;}
/* ... */

